--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "14c8TZLaYMsnoOGoVyrtxBaaukT56E5BU",
-      "authorship_tag": "ABX9TyNS15MF3EXVgxoDgmsCm0A/",
+      "authorship_tag": "ABX9TyMHayyX+xWe8Sr75CL8iEqy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -745,8 +745,7 @@
         "pipeline = Pipeline([\n",
         "    ('bow',CountVectorizer(analyzer=text_processing)),  # strings to token integer counts\n",
         "    ('tfidf', TfidfTransformer()),  # integer counts to weighted TF-IDF scores\n",
-        "    ('classifier', LogisticRegression(solver='liblinear')),  # train on TF-IDF vectors w/ Naive Bayes classifier\n",
-        "    #('classifier',LinearSVC())\n",
+        "    ('classifier', LogisticRegression(solver='liblinear')),  # train on logistic regression model\n",
         "])\n",
         "pipeline.fit(x_train,y_train)"
       ],
