--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -44,7 +44,7 @@
         "from nltk.stem.porter import *\n",
         "from nltk.stem.wordnet import WordNetLemmatizer\n",
         "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
-        "#from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.svm import LinearSVC\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.metrics import confusion_matrix, classification_report,accuracy_score"
